pytuflow/1.1/_sources/api/pytuflow.TuflowBinaries.rst
pytuflow.TuflowBinaries
=======================

.. currentmodule:: pytuflow

.. autoclass:: TuflowBinaries
   :exclude-members: __init__
   :show-inheritance:

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :nosignatures:
   
      ~TuflowBinaries.clear
      ~TuflowBinaries.count
      ~TuflowBinaries.get
      ~TuflowBinaries.items
      ~TuflowBinaries.load_dpkg_tuflow
      ~TuflowBinaries.load_installed_tuflow_versions
      ~TuflowBinaries.load_rpm_tuflow
      ~TuflowBinaries.load_tuflow_settings_cache
      ~TuflowBinaries.load_versions
      ~TuflowBinaries.package_manager
      ~TuflowBinaries.save_tuflow_settings_cache
      ~TuflowBinaries.tuflow_version_json
      ~TuflowBinaries.tuflow_version_query
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ~TuflowBinaries.version2bin
      ~TuflowBinaries.user_bin_locations
      ~TuflowBinaries.user_folders
   
   