pytuflow/1.2/_sources/api/pytuflow.TuflowBinaries.rst
pytuflow.TuflowBinaries
=======================

.. currentmodule:: pytuflow

.. autoclass:: TuflowBinaries
   :exclude-members: __init__
   :show-inheritance:

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
      :nosignatures:
   
      ~TuflowBinaries.clear
      ~TuflowBinaries.count
      ~TuflowBinaries.get
      ~TuflowBinaries.items
      ~TuflowBinaries.load_dpkg_tuflow
      ~TuflowBinaries.load_installed_tuflow_versions
      ~TuflowBinaries.load_rpm_tuflow
      ~TuflowBinaries.load_tuflow_settings_cache
      ~TuflowBinaries.load_versions
      ~TuflowBinaries.package_manager
      ~TuflowBinaries.refresh_from_settings
      ~TuflowBinaries.save_tuflow_settings_cache
      ~TuflowBinaries.tuflow_version_json
      ~TuflowBinaries.tuflow_version_query
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ~TuflowBinaries.CACHE_NAME
      ~TuflowBinaries.LINUX_BIN_NAME
      ~TuflowBinaries.MSI_NAME
      ~TuflowBinaries.NAME
      ~TuflowBinaries.STANDARD_LINUX_LOCATIONS
      ~TuflowBinaries.WINDOWS_BIN_NAME
      ~TuflowBinaries.version2bin
      ~TuflowBinaries.user_bin_locations
      ~TuflowBinaries.user_folders
   
   